--- a/index.html
+++ b/index.html
@@ -12,19 +12,38 @@
 
 </head>
 <body>
+<script src="http://mymaplist.com/js/vendor/TweenLite.min.js"></script>
+<!-- This is a very simple parallax effect achieved by simple CSS 3 multiple backgrounds, made by http://twitter.com/msurguy -->
 
-   <div class="container">
-        <div class="card card-container">
-            <h3>Kata dasar</h3>
-            <p>masukan kata dasar yang bisa dimengerti anak usia 5 sampai 12 tahun</p>
-            <form class="form-signin">
-                <input type="text" id="kata" class="form-control" placeholder="Kata dasar" required autofocus>
-                <input type="text" id="suku_kata" class="form-control" placeholder="Suku kata ( contoh : jalan -> ja-lan )" required>
-             
-                <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Submit</button>
-            </form><!-- /form -->
-        </div><!-- /card-container -->
-    </div>
+<div class="container">
+    <div class="row vertical-offset-100">
+      <div class="col-md-4 col-md-offset-4">
+         <div class="panel panel-default">
+            <div class="panel-heading">
+               <h3 class="panel-title">Please sign in</h3>
+            </div>
+            <div class="panel-body">
+               <form accept-charset="UTF-8" role="form">
+                    <fieldset>
+                  <div class="form-group">
+                      <input class="form-control" placeholder="E-mail" name="email" type="text">
+                  </div>
+                  <div class="form-group">
+                     <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                  </div>
+                  <div class="checkbox">
+                     <label>
+                        <input name="remember" type="checkbox" value="Remember Me"> Remember Me
+                     </label>
+                   </div>
+                  <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
+               </fieldset>
+                  </form>
+             </div>
+         </div>
+      </div>
+   </div>
+</div>
 
 </body>
 </html>
