--- a/index.html
+++ b/index.html
@@ -9,42 +9,42 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
    <script src = "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<!-- All the files that are required -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
 </head>
 <body>
-<script src="http://mymaplist.com/js/vendor/TweenLite.min.js"></script>
-<!-- This is a very simple parallax effect achieved by simple CSS 3 multiple backgrounds, made by http://twitter.com/msurguy -->
-
-<div class="container">
-    <div class="row vertical-offset-100">
+   <div class="container">
+    <div class="row">
       <div class="col-md-4 col-md-offset-4">
          <div class="panel panel-default">
-            <div class="panel-heading">
-               <h3 class="panel-title">Please sign in</h3>
+            <div class="panel-heading" align="center">
+               <h3 class="panel-title">Kata Dasar</h3>
             </div>
             <div class="panel-body">
                <form accept-charset="UTF-8" role="form">
                     <fieldset>
                   <div class="form-group">
-                      <input class="form-control" placeholder="E-mail" name="email" type="text">
+                      <input class="form-control" placeholder="Kata Dasar" name="kata_dasar" type="text">
                   </div>
                   <div class="form-group">
-                     <input class="form-control" placeholder="Password" name="password" type="password" value="">
-                  </div>
-                  <div class="checkbox">
-                     <label>
-                        <input name="remember" type="checkbox" value="Remember Me"> Remember Me
-                     </label>
-                   </div>
+                     <input class="form-control" placeholder="Suku Kata ( contoh : jalan -> ja-lan)" name="text" type="text" value="">
+                  </div>   
                   <input class="btn btn-lg btn-success btn-block" type="submit" value="Login">
                </fieldset>
                   </form>
              </div>
+             <div class="panel-heading" align="center">
+             <p>Notes*<br>Masukan Kata yang dapat dimengerti oleh anak usia 5 sampai 12 tahun</p>
+            </div>
+             
          </div>
       </div>
    </div>
 </div>
-
 </body>
 </html>
 
